--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,7 @@ edition = "2018"
 git2 = "0.13"
 crossterm = { version = "0.19" }
 tui = { version = "0.14", default-features = false, features = ['crossterm'] }
+tui-logger = "0.6.3"
+log = "0.4"
 clap = { version = "3.0.0-beta.2" }
 chrono = "0.4.19"
