Calculate the column widths using `cassowary`
https://github.com/fdehau/tui-rs/issues/499#issuecomment-894591566

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2018"
 [dependencies]
 git2 = "0.13"
 crossterm = { version = "0.19" }
-tui = { version = "0.14", default-features = false, features = ['crossterm'] }
+tui = { version = "0.16", default-features = false, features = ['crossterm'] }
+cassowary = "0.3"  # keep this in sync /w tui?
 clap = { version = "3.0.0-beta.2" }
 chrono = "0.4.19"
