Update to stable clap

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,5 @@ git2 = "0.13"
 crossterm = { version = "0.19" }
 tui = { version = "0.16", default-features = false, features = ['crossterm'] }
 cassowary = "0.3"  # keep this in sync /w tui?
-clap = { version = "3.0.0-beta.4" }
+clap = { version = "3.1.0" }
 chrono = "0.4.19"
